--- a/algorithms_data_structures/LAB1/LAB1.vcxproj.filters
+++ b/algorithms_data_structures/LAB1/LAB1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication1.cpp">
+    <ClCompile Include="LAB1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
