--- a/OOP/LAB_5/LAB_5.vcxproj
+++ b/OOP/LAB_5/LAB_5.vcxproj
@@ -127,7 +127,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="B.cpp" />
+    <ClCompile Include="D1.cpp" />
+    <ClCompile Include="D2.cpp" />
+    <ClCompile Include="D3.cpp" />
+    <ClCompile Include="D4.cpp" />
+    <ClCompile Include="D5.cpp" />
     <ClCompile Include="LAB_5.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="B.h" />
+    <ClInclude Include="D1.h" />
+    <ClInclude Include="D2.h" />
+    <ClInclude Include="D3.h" />
+    <ClInclude Include="D4.h" />
+    <ClInclude Include="D5.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
